--- a/gradle.properties
+++ b/gradle.properties
@@ -41,3 +41,14 @@ mod_group_id=net.sen.minearcana
 mod_authors=Sen
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=This mod adds magical arcs to Minecraft.
+
+## JEI Properties
+jei_mc_version=1.21.1
+jei_version=19.25.0.325
+
+## Jade
+jade_version=15.10.3
+
+## Modonomicon
+modonomicon_minecraft_version=1.21.1
+modonomicon_version=1.117.2
